<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        style="@style/linearParentMatch"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/top_radius_card"
        android:padding="@dimen/loginViewsMargin">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:id="@+id/container_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:background="@drawable/edittext_bg_blue"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/login_email_hint"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:background="@drawable/edittext_bg_blue"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:maxLines="1" />

        <RelativeLayout
            android:id="@+id/jeniskelamin"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:paddingRight="10dp"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg_blue">

            <Spinner
                android:id="@+id/edtUserType"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:entries="@array/user_type"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"
                android:theme="@style/SpinnerTheme"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/forgot_password"
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="86dp"
            android:onClick="viewForgotPAssword"
            android:text="@string/forgot_password"
            android:textSize="@dimen/newsMoreTextSize" />

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:background="@drawable/blue_button"
            android:layout_marginBottom="15sp"
            android:fontFamily="@font/poppins_bold"
            android:textAllCaps="false"
            android:textSize="@dimen/text_inside_button" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="@dimen/loginViewsMargin"
                android:onClick="viewRegisterClicked"
                android:text="@string/login_signup_hint"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerButton"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="@dimen/loginViewsMargin"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/daftar_disini"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</layout>
