<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".laundry_ui.CategoryDetailActivity">
    <data>
        <variable
            name="category_detail"
            type="com.speedlaundry.admin.model.laundry.category.CategoryItem" />
    </data>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:id="@+id/refresh"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@color/blue_top_main" />
                <androidx.core.widget.NestedScrollView
                    android:layout_above="@id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="120dp"
                    android:layout_height="match_parent"
                    tools:ignore="NotSibling">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical"
                            tools:ignore="UselessParent">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:orientation="horizontal"
                                android:layout_height="wrap_content">
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="13dp"
                                    android:layout_marginBottom="15dp"
                                    android:orientation="horizontal">
                                    <ImageView
                                        android:layout_width="25dp"
                                        android:layout_marginStart="15dp"
                                        android:layout_height="30dp"
                                        android:id="@+id/back"
                                        android:contentDescription="@string/image_view"
                                        android:src="@drawable/back_white_icon"
                                        tools:ignore="TooDeepLayout" />
                                </LinearLayout>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="27dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="3"
                                    android:fontFamily="@font/poppins_regular"
                                    android:gravity="center"
                                    android:id="@+id/txtAction"
                                    android:text="@string/detail_kategori"
                                    android:textColor="@color/white"
                                    android:textSize="18sp" />
                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_gravity="center"
                                        android:gravity="center"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        tools:ignore="UselessLeaf" />
                            </LinearLayout>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/card_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="5dp"
                                android:layout_marginTop="5dp"
                                app:cardElevation="0dp"
                                app:cardCornerRadius="20dp">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="20dp">
                                    <LinearLayout
                                        android:id="@+id/lytNama"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="10dp"
                                        android:orientation="vertical">

                                        <TextView
                                            style="@style/custom_edittext_lable"
                                            android:text="@string/nama" />

                                        <EditText
                                            android:id="@+id/edtNama"
                                            style="@style/custom_edittext"
                                            android:autofillHints=""
                                            android:contentDescription="@string/edit_text"
                                            android:text="@{category_detail.name}"
                                            android:fontFamily="@font/poppins_regular"
                                            android:inputType="text"
                                            tools:ignore="LabelFor" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:id="@+id/lytFee"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:orientation="vertical">

                                        <TextView
                                            style="@style/custom_edittext_lable"
                                            android:text="@string/biaya_per_kg" />

                                        <EditText
                                            android:id="@+id/edtFee"
                                            style="@style/custom_edittext"
                                            android:autofillHints=""
                                            android:text="@{category_detail.fee}"
                                            android:fontFamily="@font/poppins_regular"
                                            android:inputType="number"
                                            tools:ignore="LabelFor" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:id="@+id/lytDetail"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:orientation="vertical">

                                        <TextView
                                            style="@style/custom_edittext_lable"
                                            android:text="@string/detail" />

                                        <EditText
                                            android:id="@+id/edtDetail"
                                            style="@style/custom_edittext"
                                            android:autofillHints=""
                                            android:contentDescription="@string/edit_text"
                                            android:text="@{category_detail.detail}"
                                            android:fontFamily="@font/poppins_regular"
                                            android:inputType="text|textMultiLine"
                                            tools:ignore="LabelFor" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:id="@+id/lytDeskripsi"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:orientation="vertical">
                                        <TextView
                                            style="@style/custom_edittext_lable"
                                            android:text="@string/deskripsi" />
                                        <EditText
                                            android:id="@+id/edtDeskripsi"
                                            style="@style/custom_edittext"
                                            android:autofillHints=""
                                            android:text="@{category_detail.description}"
                                            android:fontFamily="@font/poppins_regular"
                                            android:inputType="text|textMultiLine"
                                            tools:ignore="LabelFor" />
                                    </LinearLayout>
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal"
                                        tools:ignore="UseSwitchCompatOrMaterialXml">

                                        <Switch
                                            android:id="@+id/edtStatus"
                                            style="@style/custom_edittext_lable"
                                            android:layout_width="fill_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="20dp"
                                            android:checked="false"
                                            android:fontFamily="@font/poppins_regular"
                                            android:gravity="left"
                                            android:text="@string/status"
                                            android:textSize="16sp"
                                            tools:ignore="RtlHardcoded" />

                                    </LinearLayout>
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>


                    </LinearLayout>


                </androidx.core.widget.NestedScrollView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    app:cardElevation="0dp"
                    android:background="@color/white"
                    android:layout_alignParentBottom="true"
                    app:cardCornerRadius="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/white"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessLeaf">
                        </LinearLayout>

                        <Button
                            android:layout_margin="10dp"
                            android:id="@+id/btnSubmit"
                            android:layout_width="match_parent"
                            android:fontFamily="@font/poppins_bold"
                            android:textAllCaps="false"
                            android:letterSpacing="0.10"
                            android:layout_height="wrap_content"
                            android:text="@string/submit"
                            android:background="@drawable/blue_button"
                            android:textColor="@color/white"
                            android:textSize="17sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>